5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1616_2939.log
== TEST (2019-04-01 14:03:27) 
-- CODE:
int=print("abc")
-- OUTPUT:
abc
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:05:08) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
-- OUTPUT:
abc
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:08:32) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(2,round)
-- OUTPUT:
2 <built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:09:23) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(round(2,ll))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(2,ll))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:01) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- OUTPUT:
-87.336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:55) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83+espetiho
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro=0.83+espetiho
NameError: name 'espetiho' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:05) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83+espetinho
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro=0.83+espetinho
NameError: name 'espetinho' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:46) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83+ espetinho
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro=0.83+ espetinho
NameError: name 'espetinho' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:11:47) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83+ espetinho
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- EXECUTION TIME:
0.157422
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2939/main.py", line 2, in <module>
    lucro=0.83+ espetinho
NameError: name 'espetinho' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:48) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83+ espetinho
espetinho=12
empregado=100+(0.2*lucro)
ll=(espetinho+lucro)-empregado
print(ll)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    lucro=0.83+ espetinho
NameError: name 'espetinho' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:13:15) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
lucro=0.83 + 12
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- OUTPUT:
-89.736
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:29) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
es=12
lucro=0.83 + es
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- OUTPUT:
-89.736
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:40) 
-- CODE:
X=input("Quantos espetos bob vendeu? ")
es=12
lucro=0.83 + es
empregado=100+0.2*lucro
ll=lucro-empregado
print(ll)
-- OUTPUT:
-89.736
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:21) 
-- CODE:
X=int(input("Quantos espetos bob vendeu? ")
es=12
lucro=0.83 + es
empregado=100+0.2*lucro
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    es=12
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:32) 
-- CODE:
int=(input("Quantos espetos bob vendeu? ")
es=12
lucro=0.83 + es
empregado=100+0.2*lucro
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    es=12
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:32) 
-- CODE:
a=int(input("Quantos espetos bob vendeu? ")
es=12
lucro=0.83 * (es*a)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    es=12
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:40) 
-- CODE:
a=int(input("Quantos espetos bob vendeu? ")
lucro=0.83 * (es*a)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    lucro=0.83 * (es*a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:18:47) 
-- CODE:
a=(input("Quantos espetos bob vendeu? ")
lucro=0.83 * (es*a)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    lucro=0.83 * (es*a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:18:48) 
-- CODE:
a=(input("Quantos espetos bob vendeu? ")
lucro=0.83 * (es*a)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- EXECUTION TIME:
0.162573
-- ERROR:
  File "/home/codebench/codes/1616/2939/main.py", line 2
    lucro=0.83 * (es*a)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:53) 
-- CODE:
var=int(input("Quantos espetos bob vendeu? ")
lucro=0.83 * (es*a)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    lucro=0.83 * (es*a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:04) 
-- CODE:
var=int(input("Quantos espetos bob vendeu? ")
lucro=0.83 * var
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    lucro=0.83 * var
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:18) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? ")
lucro=0.83 * var
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- ERROR:
File "XXXX", line 2
    lucro=0.83 * var
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:20:19) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? ")
lucro=0.83 * var
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- EXECUTION TIME:
0.142308
-- ERROR:
  File "/home/codebench/codes/1616/2939/main.py", line 2
    lucro=0.83 * var
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:38) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * var
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- OUTPUT:
-80.08000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:46) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * var
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- OUTPUT:
-80.08000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:16) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(ll)
-- OUTPUT:
139.04000000000002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:44) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(round(2,ll)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:48) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(round(2,ll))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(2,ll))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:57) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(round(ll,2))
-- OUTPUT:
139.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:04) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(round(ll,2))
-- OUTPUT:
139.04
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:22:09) 
-- CODE:
var=float(input(" Quantos espetos bob vendeu? "))
lucro=0.83 * (var*12)
empregado=100+(0.2*lucro)
ll=lucro-empregado
print(round(ll,2))
-- EXECUTION TIME:
0.164669
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
139.04
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
537.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
